# cpp3ds-template

./: .travis.yml  CMakeLists.txt  README.md
res/app/: cia.rsf
src/: main.cpp
